connect auth to backend
